Ajustes nos templates

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer footer-center p-10 bg-emerald-800 text-emerald-200 rounded">
-  <nav class="grid grid-cols-2 md:grid-cols-4 gap-4">
+  <nav class="grid grid-cols-2 lg:grid-cols-4 gap-4">
     <a class="link link-hover" href="/">Início</a>
     <a class="link link-hover" href="/sobre">Sobre o projeto</a>
     <a class="link link-hover" href="/lista-empresas">Empresas cadastradas</a>
