--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -26,8 +26,21 @@
         <p class="text-lg">Os dados são obtidos por meio de um script desenvolvido em Python, que acessa periodicamente o Portal Dados Abertos CVM, baixa os arquivos em formato <em>ZIP</em>, descompacta-os, extraindo um arquivo <em>XML</em> onde são encontrados os dados e formulários em <em>PDF</em> enviados pelas empresas. Parte dos dados é utilizada de forma literal (a maioria numéricos) e parte é enviada ao GPT-4 por meio da API para interpretação.</p>
         <h2 class="text-xl font-sans font-bold mb-2.5 mt-8">E eu posso confiar nessas informações?</h2>
         <p class="text-lg">O projeto <strong>lupa(ESG)</strong> não se responsabiliza pela veracidade das informações apresentadas. O projeto busca facilitar o acesso a informações públicas, sem realizar qualquer tipo de validação ou verificação das mesmas. Além disso, ainda que haja um cuidado no processo de criação de prompts para modelos de IA generativa, é sempre possível que ocorram alucinações. Para informações oficiais e atualizadas, consulte sempre o site da <a href="https://www.cvm.gov.br/" target="_blank">CVM</a>, além das páginas das próprias empresas.</p>
+        <h2 class="text-xl font-sans font-bold mb-2.5 mt-8">O projeto vai evoluir?</h2>
+        <p class="text-lg">Sim! Ainda há muita coisa a ser feita. O projeto <strong>lupa(ESG)</strong> é um trabalho em andamento e está em constante evolução. Além de melhorias na performance e execução do código, estas são algumas das ideias que estão no radar:</p>
+        <ul class="list-disc">
+          <li>Incorporar dados retroativos, possibilitando o acompanhamento histórico</li>
+          <li>Desenvolver uma lógica de processamento dos relatórios integrados das empresas</li>
+          <li>Aprimorar as análises e visualizações dos dados</li>
+          <li>Implementar uma área com estatísticas gerais sobre os dados</li>
+          <li>Desenvolver um sistema que permita a comparação entre empresas</li>
+          <li>Incorporar raspadores de notícias relacionadas a cada empresa</li>
+          <li>Implementar uma API para acesso aos dados</li>
+        </ul>
         <h2 class="text-xl font-sans font-bold mb-2.5 mt-8">Quem é o responsável pelo projeto?</h2>
         <p class="text-lg">Segundo o ChatGPT, <strong>Paulo Fehlauer</strong> é um escritor, jornalista, fotógrafo, artista visual, realizador audiovisual, desenvolvedor e pesquisador brasileiro. Nascido em Marechal Cândido Rondon, Paraná, em 1982, graduado em jornalismo pela USP (2009), mestre em Estudos Literários pela Unifesp (2020) e doutorando em Teoria e História Literária na Unicamp. Ganhou reconhecimento na literatura com seu livro <a href="https://amzn.to/43Qf7S7" target="_blank">Extremo Oeste</a>, premiado em 2023 com o Prêmio Jabuti na categoria autor estreante e em 2021 com o Prêmio Cepe Nacional de Literatura. É também desenvolvedor, com experiência em jornalismo de dados e automação.</p>
+        <h2 class="text-xl font-sans font-bold mb-2.5 mt-8">Gostei! Como posso contribuir?</h2>
+        <p class="text-lg"><strong>lupa(ESG)</strong> é um projeto de código aberto e você pode contribuir de diversas formas. Se você é desenvolvedor, pode contribuir com código. Se você é designer, pode contribuir com a interface. Se você é jornalista, pode contribuir com a curadoria e análise dos dados. Se você é pesquisador, pode contribuir com a interpretação dos dados. Se você é investidor ou um cidadão interessado, pode contribuir com ideias e sugestões, além de recursos financeiros. Entre em contato!</p>
     </div>
   </div>
 {% endblock %}
