Ajustes de conteúdo

--- a/templates/lista_empresas.html
+++ b/templates/lista_empresas.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="max-w-4xl mx-auto px-4 pt-8 pb-16">
-  <h1 class="text-4xl md:text-6xl font-serif font-bold mb-2.5 mt-16">Empresas Cadastradas</h1>
+  <h1 class="text-4xl md:text-6xl font-serif font-bold mb-2.5 mt-16">Empresas cadastradas</h1>
   <div class="badge badge-outline">Total de empresas: {{ empresas|length }}</div>
   <div class="bg-gradient-to-br from-emerald-200 to-emerald-100 shadow overflow-hidden rounded-md mt-16">
     <ul class="divide-y divide-emerald-100">
