--- a/templates/empresa.html
+++ b/templates/empresa.html
@@ -19,8 +19,16 @@
       <div class="badge badge-outline badge-lg mb-1">Versão: {{ documentos[0].Versao }}</div>
   </div>
 
-  <!-- INFORMAÇÕES ESSENCIAIS -->
+  <!-- DADOS GERAIS -->
   <h2 class="text-3xl md:text-4xl font-serif font-bold mt-8 mb-4">Dados gerais</h2>
+  <div role="alert" class="alert shadow-lg bg-emerald-800 border-0">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-primary shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+    <div>
+      <h3 class="font-bold text-emerald-100">Atenção!</h3>
+      <div class="text-xs text-emerald-100">Parte das informações abaixo foi gerada com o uso de IA generativa. Assim, é sempre possível que ocorram alucinações. <br />Para informações oficiais e atualizadas, consulte sempre o site da CVM, além das páginas das próprias empresas.</div>
+      <a href="/sobre" class="link-primary">Saiba mais</a>
+    </div>
+  </div>
   <div class="bg-gradient-to-br from-emerald-200 to-emerald-100 shadow overflow-hidden rounded-md mt-4 px-6 py-8">
       <div>
           <h3 class="text-xl font-semibold">Histórico</h3>
@@ -144,6 +152,7 @@
     <p class="font-bold mt-6">Quais são os principais aspectos relacionados ao cumprimento de obrigações legais ligadas a questões ambientais e sociais?</p>
     <p>{{ documentos[0].EfeitosRegulacaoEstatal.efeitos_regulacao }}</p>
     {% endif %}
+
   </div>
 </div>
 
