--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -28,14 +28,14 @@
         <p class="text-lg">O projeto <strong>lupa(ESG)</strong> não se responsabiliza pela veracidade das informações apresentadas. O projeto busca facilitar o acesso a informações públicas, sem realizar qualquer tipo de validação ou verificação das mesmas. Além disso, ainda que haja um cuidado no processo de criação de prompts para modelos de IA generativa, é sempre possível que ocorram alucinações. Para informações oficiais e atualizadas, consulte sempre o site da <a href="https://www.cvm.gov.br/" target="_blank">CVM</a>, além das páginas das próprias empresas.</p>
         <h2 class="text-xl font-sans font-bold mb-2.5 mt-8">O projeto vai evoluir?</h2>
         <p class="text-lg">Sim! Ainda há muita coisa a ser feita. O projeto <strong>lupa(ESG)</strong> é um trabalho em andamento e está em constante evolução. Além de melhorias na performance e execução do código, estas são algumas das ideias que estão no radar:</p>
-        <ul class="list-disc">
-          <li>Incorporar dados retroativos, possibilitando o acompanhamento histórico</li>
-          <li>Desenvolver uma lógica de processamento dos relatórios integrados das empresas</li>
-          <li>Aprimorar as análises e visualizações dos dados</li>
-          <li>Implementar uma área com estatísticas gerais sobre os dados</li>
-          <li>Desenvolver um sistema que permita a comparação entre empresas</li>
-          <li>Incorporar raspadores de notícias relacionadas a cada empresa</li>
-          <li>Implementar uma API para acesso aos dados</li>
+        <ul class="list-disc list-outside pl-12">
+          <li class="pt-4 pb-1 text-md">Incorporar dados retroativos, possibilitando o acompanhamento histórico</li>
+          <li class="py-1 text-md">Desenvolver uma lógica de processamento dos relatórios integrados das empresas</li>
+          <li class="py-1 text-md">Aprimorar as análises e visualizações dos dados</li>
+          <li class="py-1 text-md">Implementar uma área com estatísticas gerais sobre os dados</li>
+          <li class="py-1 text-md">Desenvolver um sistema que permita a comparação entre empresas</li>
+          <li class="py-1 text-md">Incorporar raspadores de notícias relacionadas a cada empresa</li>
+          <li class="py-1 text-md">Implementar uma API para acesso aos dados</li>
         </ul>
         <h2 class="text-xl font-sans font-bold mb-2.5 mt-8">Quem é o responsável pelo projeto?</h2>
         <p class="text-lg">Segundo o ChatGPT, <strong>Paulo Fehlauer</strong> é um escritor, jornalista, fotógrafo, artista visual, realizador audiovisual, desenvolvedor e pesquisador brasileiro. Nascido em Marechal Cândido Rondon, Paraná, em 1982, graduado em jornalismo pela USP (2009), mestre em Estudos Literários pela Unifesp (2020) e doutorando em Teoria e História Literária na Unicamp. Ganhou reconhecimento na literatura com seu livro <a href="https://amzn.to/43Qf7S7" target="_blank">Extremo Oeste</a>, premiado em 2023 com o Prêmio Jabuti na categoria autor estreante e em 2021 com o Prêmio Cepe Nacional de Literatura. É também desenvolvedor, com experiência em jornalismo de dados e automação.</p>
